--- a/doc/talks/Makefile
+++ b/doc/talks/Makefile
@@ -2,5 +2,6 @@ all:
 	pdflatex pycon2006.tex
 
 clean:
-	rm -f *.log *.nav *.toc *.vrb *.snm *.aux *.bbl *.blg *.out
+	rm -f *.log *.nav *.toc *.vrb *.snm *.aux *.bbl *.blg *.out *~
+
 
