Late night fixes to nabu

--- a/test/examples/test-drive-sources/nabu.conf
+++ b/test/examples/test-drive-sources/nabu.conf
@@ -1,7 +1,7 @@
 #!/usr/bin/env python
 # Configuration file for the examples.
-user = 'crapet'
-password = 'soleil'
+user = 'nabudemo'
+password = '$nabudemo'
 server_url = 'http://furius.dyndns.biz/nabu/cgi-bin/nabu-publish-handler.cgi'
 verbose = True
 exclude = ['.svn']
